--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <a href="smartappbanner://">Launch SmartAppBanner app</a><br/>
+    <a href="gcpresentations://">Launch GC Presentations</a><br/>
   </body>
 </html>
