--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <a href="gcpresentations://">Launch GC Presentations</a><br/>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=gcpresentations://">
+        <script type="text/javascript">
+            window.location.href = "gcpresentations://"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='gcpresentations://'>link to example</a>.
+    </body>
 </html>
