--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=gcpresentations://">
+        <meta http-equiv="refresh" content="0; url=gcpresentations://ZFGQWCO8S6K">
         <script type="text/javascript">
-            window.location.href = "gcpresentations://"
+            window.location.href = "gcpresentations://ZFGQWCO8S6K"
         </script>
         <title>Page Redirection</title>
     </head>
